--- a/teams/topic1-polsto/refs/substrate-node-template/runtime/Cargo.toml
+++ b/teams/topic1-polsto/refs/substrate-node-template/runtime/Cargo.toml
@@ -55,6 +55,7 @@ pallet-contracts-primitives = { version = "7.0.0", git = "https://github.com/par
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
 pallet-publish-platform = { version = "0.1.0", default-features = false, path = "../pallets/publish-platform" }
+bwg-multisig = { version = "0.0.1-dev", default-features=false, path = "../pallets/bwg-multisig"}
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.40" }
@@ -96,6 +97,7 @@ std = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 	"substrate-wasm-builder",
+	"bwg-multisig/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
