--- a/teams/topic1-polsto/src/zombienet/examples/9999-polsto-config.toml
+++ b/teams/topic1-polsto/src/zombienet/examples/9999-polsto-config.toml
@@ -3,7 +3,7 @@ timeout = 1000
 
 [relaychain]
 chain = "rococo-local"
-default_command = "./bin/polkadot"
+default_command = "../polkadot/target/release/polkadot"
 
   [[relaychain.nodes]]
   name = "alice"
@@ -29,13 +29,13 @@ chain = "statemine-local"
 
   [[parachains.collators]]
   name = "statemine-collator01"
-  command = "./bin/polkadot-parachain"
+  command = "../cumulus/target/release/polkadot-parachain"
   ws_port = 9910
   args = ["--log=xcm=trace,pallet-assets=trace"]
 
   [[parachains.collators]]
   name = "statemine-collator02"
-  command = "./bin/polkadot-parachain"
+  command = "../cumulus/target/release/polkadot-parachain"
   ws_port = 9911
   args = ["--log=xcm=trace,pallet-assets=trace"]
 
