--- a/teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-series-contract/contracts/nft/Cargo.toml
+++ b/teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-series-contract/contracts/nft/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Astar builder", "Paras"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "~4.0.0", default-features = false}
+ink = { version = "4.1.0", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
 
-openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
-launchpad_pkg = { path = "../../logics", default-features = false }
+openbrush = { tag = "3.1.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
+nft_series_pkg = { path = "../../logics", default-features = false }
 
 [lib]
 path = "lib.rs"
@@ -24,6 +24,6 @@ std = [
     "scale-info/std",
 
     "openbrush/std",
-    "launchpad_pkg/std",
+    "nft_series_pkg/std",
 ]
 ink-as-dependency = []
